Add flags to supress warnings for RISC-V build of FreeRTOS

--- a/freertos/Demo/RISC-V-Qemu-virt_GCC/Makefile
+++ b/freertos/Demo/RISC-V-Qemu-virt_GCC/Makefile
@@ -22,6 +22,9 @@ CPPFLAGS = \
 CFLAGS  = -mabi=ilp32 -mcmodel=medany \
 	-march=rv32i \
 	-Wall \
+	-Wno-array-bounds \
+	-Wno-unused-variable \
+	-Wno-return-type \
 	-fmessage-length=0 \
 	-ffunction-sections \
 	-fdata-sections \
